--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,7 @@
     tools:context=".HomeActivity">
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fvMain"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
