--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,18 +20,18 @@
             android:id="@+id/info_user_cardView"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="75dp">
+            app:cardCornerRadius="75dp"
+            tools:ignore="SpeakableTextPresentCheck">
 
             <ImageView
-                android:id="@+id/ivProfile"
+                android:id="@+id/iv_profile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                app:srcCompat="@color/purple_200" />
+                android:src="@drawable/ic_happy" />
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
@@ -49,7 +49,7 @@
         android:textColor="#000000"/>
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/tv_name"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
@@ -80,7 +80,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnEnjoy"
+        android:id="@+id/btn_enjoy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
