--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,12 +9,13 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fv_main"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:name="com.example.taveconnect.ListFragment"
-        tools:layout="@layout/fragment_list"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="match_parent"
+        android:layout_height="700dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_nav_home"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout="@layout/fragment_list" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
