--- a/app/src/main/res/layout/item_rank_list.xml
+++ b/app/src/main/res/layout/item_rank_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,7 +39,7 @@
             android:textColor="@color/black"
             android:textSize="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_rank_int"
+            app:layout_constraintStart_toEndOf="@+id/tv_rank_int"
             app:layout_constraintTop_toTopOf="parent" />
 
 
