--- a/app/src/main/res/layout/fragment_explain.xml
+++ b/app/src/main/res/layout/fragment_explain.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:layout_margin="30dp"
-        android:layout_weight="1"
+        android:layout_weight="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Connect X 즐기는 방법"
@@ -19,38 +19,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_weight="1"
-        android:lineSpacingExtra="24sp"
-        android:text=" Connect4는 먼저 4목을 완성하는 플레이어가 승리하는 게임입니다."
-        android:textAlignment="textStart"
-        android:textColor="#000000"
-        android:textSize="24sp" />
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_weight="1"
-        android:lineSpacingExtra="24sp"
-        android:text=" 게임은 번갈아 진행되며, 자신의 차례마다 말을 게임 보드의 열에 놓을 수 있습니다. 말은 선택된 열의 가장 아래의 빈 칸에 놓여집니다."
-        android:textAlignment="textStart"
-        android:textColor="#000000"
-        android:textSize="24sp" />
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_marginBottom="30dp"
-        android:layout_weight="1"
-        android:lineSpacingExtra="24sp"
-        android:text=" 게임의 난이도에 따라 타임아웃이 존재할 수 있습니다. 만일 제한 시간이 끝나도록 말을 두지 않으면, 게임에서 패배합니다."
-        android:textAlignment="textStart"
-        android:textColor="#000000"
-        android:textSize="24sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:layout_weight="0"
+                android:lineSpacingExtra="24sp"
+                android:text=" Connect4는 먼저 4목을 완성하는 플레이어가 승리하는 게임입니다."
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textSize="24sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:layout_weight="0"
+                android:lineSpacingExtra="24sp"
+                android:text=" 게임은 번갈아 진행되며, 자신의 차례마다 말을 게임 보드의 열에 놓을 수 있습니다. 말은 선택된 열의 가장 아래의 빈 칸에 놓여집니다."
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textSize="24sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:layout_marginBottom="30dp"
+                android:layout_weight="0"
+                android:lineSpacingExtra="24sp"
+                android:text=" 게임의 난이도에 따라 타임아웃이 존재할 수 있습니다. 만일 제한 시간이 끝나도록 말을 두지 않으면, 게임에서 패배합니다."
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
